--- a/src/main/resources/templates/clientForm.html
+++ b/src/main/resources/templates/clientForm.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/client}" th:object="${client}" method="post">
+<form th:action="@{/client/clientForm}" th:object="${client}" method="POST">
     <p>Firstname: <input type="text" th:field="*{firstname}"/></p>
     <p>Lastname: <input type="text" th:field="*{lastname}"/></p>
     <p>Email: <input type="text" th:field="*{email}"/></p>
-    <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+    <p><input type="submit" value="ajouter"/></p>
 </form>
 </body>
 </html>
