--- a/src/main/resources/templates/clientForm.html
+++ b/src/main/resources/templates/clientForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
+    <title>Ajout d'un client</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<h1>Form</h1>
+<h1>Nouveau client</h1>
 <form th:action="@{/client/clientForm}" th:object="${client}" method="POST">
     <p>Firstname: <input type="text" th:field="*{firstname}"/></p>
     <p>Lastname: <input type="text" th:field="*{lastname}"/></p>
