--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -3,15 +3,17 @@
 <head>
     <title>client Lists</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<table>
+<table class="table">
     <thead>
     <tr>
-        <th>id</th>
-        <th>firstname</th>
-        <th>lastname</th>
-        <th>email</th>
+        <th scope="col">id</th>
+        <th scope="col">firstname</th>
+        <th scope="col">lastname</th>
+        <th scope="col">email</th>
     </tr>
     </thead>
     <tbody>
