--- a/src/main/resources/templates/clientForm.html
+++ b/src/main/resources/templates/clientForm.html
@@ -3,6 +3,8 @@
 <head>
     <title>Ajout d'un client</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 <h1>Nouveau client</h1>
