--- a/src/main/resources/templates/factureForm.html
+++ b/src/main/resources/templates/factureForm.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <title>Ajout d'une facture</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 <h1>Nouvelle facture</h1>
-<form th:action="@{/facture/factureForm}" th:object="${facture}" method="POST">
+<form class="form-group" th:action="@{/facture/factureForm}" th:object="${facture}" method="POST">
     <p>Montant: <input type="number" th:field="${facture.montant}"></p>
 
     <select id="taxe" th:field="*{taxe}">
         <option th:each="taxe : ${taxes}" th:value="${taxe}" th:text="${taxe.getTaxe()} + ' %'"></option>
     </select>
+
+    <p>Date d'émission : <input type="date" th:field="*{dateEmise}"></p>
 
     <p>Référence: <input type="text" th:field="${facture.reference}"></p>
 
@@ -20,17 +24,25 @@
 
     <select id="types" th:field="*{typeFacture}">
         <option th:each="typefct : ${typeFactures}" th:value="${typefct}" th:text="${typefct.getType()}"></option>
-    </select>
+    </select> <br>
+
+    <p> Nb de candidats : <input type="text" th:text="${facture.nbCandidats}"></p>
 
     <select id="paiement" th:field="*{moyenPaiement}">
         <option th:each="moyenPaiement : ${moyenPaiements}" th:value="${moyenPaiement}"
                 th:text="${moyenPaiement.getMoyenPaiement()}"></option>
-    </select>
+    </select> <br>
 
     <select id="client" th:field="*{client}">
         <option th:each="client : ${clientList}" th:value="${client.id}"
-                th:text="${client.firstname + client.lastname}"></option>
-    </select>
+                th:text="${client.email}"></option>
+    </select> <br>
+
+    <select id="status" th:field="*{statusFacture}">
+        <option th:each="st : ${status}" th:value="${st}" th:text="${st.getStatus()}"></option>
+    </select><br>
+
+<!--    <p>Date encaissée : <input type="date" th:field="*{dateEncaissee}"></p>-->
 
     <p><input type="submit" value="ajouter"/></p>
 </form>
